--- a/app/modules/chat_widget/chat.css
+++ b/app/modules/chat_widget/chat.css
@@ -14,6 +14,8 @@ body {
 
 	min-width:300px;
 	width: 100%;
+	bottom: 0px;
+	position: absolute;
 }
 
 .ChatUI .title{
@@ -28,7 +30,8 @@ body {
 
 	background-color: white;
 	padding: 5px;
-	height: 500px;
+	bottom: 10px;
+	min-height: 300px;
 	overflow-y: auto;
 	display:none;
 }
