--- a/app/modules/header/header-view.css
+++ b/app/modules/header/header-view.css
@@ -1,30 +1,23 @@
-.g-widget
-{
+.g-widget {
   position: relative;
-  width: 300px;
-  height: 350px;
-  margin: 50px auto;
   background: #FFF;
   border-radius: 5px;
-  box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
+  padding-bottom: 20px;
 }
 
-.g-widget > .g-cover
-{
+.g-widget > .g-cover {
   height: 160px;
   overflow: hidden;
 }
 
-.g-widget > .g-cover > img
-{
+.g-widget > .g-cover > img {
   width: 100%;
   height: auto;
   min-height: 160px;
   border-radius: 4px 4px 0 0;
 }
 
-.g-widget > .photo
-{
+.g-widget > .photo {
   position: absolute;
   top: 85px;
   left: 50%;
@@ -35,8 +28,7 @@
   border-radius: 50%;
 }
 
-.g-widget > h1, .g-widget > h2, .g-widget > h3
-{
+.g-widget > h1, .g-widget > h2, .g-widget > h3 {
   display: block;
   margin: 10px 0;
   text-align: center;
@@ -46,8 +38,7 @@
   color: #999;
 }
 
-.g-widget > h1
-{
+.g-widget > h1 {
   margin: 60px 0 20px;
   font-size: 26px;
   color: #000;
@@ -55,8 +46,7 @@
 
 .g-widget > h3 { font-size: 12px }
 
-.g-widget > ul
-{
+.g-widget > ul {
   position: absolute;
   top: 20px;
   left: 100%;
@@ -64,8 +54,7 @@
   border-radius: 0 3px 3px 0;
 }
 
-.g-widget > ul > li > a
-{
+.g-widget > ul > li > a {
   display: block;
   padding: 5px 6px;
   color: #FFF;
