--- a/app/modules/header/header-view.css
+++ b/app/modules/header/header-view.css
@@ -24,8 +24,11 @@
   width: 100px;
   height: 100px;
   margin: 0 0 0 -55px;
-  border: 5px solid #FFF;
-  border-radius: 50%;
+  background:rgba(255,255,255,1);
+  border-radius:100%;
+  background-size:100% 100%;
+  padding:7px;
+  border:4px solid rgba(255,255,255,1)
 }
 
 .g-widget > h1, .g-widget > h2, .g-widget > h3 {
