--- a/app/modules/chat/chat-view.css
+++ b/app/modules/chat/chat-view.css
@@ -1,19 +1,20 @@
 #browser-window{
-	height: auto;
-	padding: 49px 25px 10px 25px;
+	padding: 40px 25px 10px 25px;
 	position:absolute;
-	bottom: 0px;
+	height: calc(100% - 150px);
 }
 
 #viewport{
-	overflow:hidden;
-	height: 420px;
-	margin-bottom: 25px;
+	overflow:auto;
+	position: relative;
+	height: calc(100% - 73px);
+	margin-bottom: 10px;
 }
 
 #viewport-content{
-	position: relative;
-	bottom: -500px;
+	position: absolute;
+	min-height: calc(100% - 73px);
+	width: 100%;
 }
 
 .row-chat{
@@ -50,6 +51,7 @@
 	background: rgba(255, 255, 255, 0.9);
 	color: #575858;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+	display: inline-block;
 }
 
 .avatar-left:before {
@@ -60,7 +62,6 @@
 	border-color: transparent #ffffff;
 	display: block;
 	width: 0;
-	z-index: 1;
 	left: 61px;
 	top: 13px;
 }
@@ -74,7 +75,6 @@
 	border-color: transparent #ffffff;
 	display: block;
 	width: 0;
-	z-index: 1;
 	right: 61px;
 	top: 13px;
 }
@@ -86,8 +86,9 @@
 }
 
 .bubble-left{
+	float: left;
 	overflow: hidden;
-	margin-left: 75px;
+	text-align: left;
 }
 
 .avatar-right{
@@ -97,7 +98,8 @@
 
 .bubble-right{
 	overflow: hidden;
-	margin-right: 75px;
+	float: right;
+	text-align: right;
 }
 
 
