--- a/app/modules/contact/contact-card-view.css
+++ b/app/modules/contact/contact-card-view.css
@@ -6,12 +6,15 @@ a.nostyle{
 }
 div.portfoliocard{
 	position:relative;
-	width:400px;
-  	height:280px;
-	background:rgba(255,255,255,1);
-	box-shadow:0px -1px 3px rgba(0,0,0,0.1),
-				0px 2px 6px rgba(0,0,0,0.5);
-	margin:5% auto;
+	width:410px;
+  	height:310px;
+	background: rgba(255, 255, 255, 0.9);
+	color: #575858;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	display: inline-block;
 	overflow:hidden;
 	z-index:100;
 }
@@ -19,11 +22,8 @@ div.portfoliocard div.coverphoto{
   position:relative;
 	width:100%;
   top:80px;
-	height:120px;
+	height:140px;
 	background-size: 100%;
-	border-bottom:1px solid rgba(0,0,0,0.1);
-	box-shadow:inset 0px 3px 20px rgba(255,255,255,0.3),
-				1px 0px 2px rgba(255,255,255,0.7);
 	z-index:98;
 }
 div.portfoliocard div.profile_picture{
@@ -58,20 +58,18 @@ div.portfoliocard div.title_col{
 
 div.portfoliocard div.event_desc{
 	position:absolute;
-	bottom:0px;
+	bottom:5px;
 }
 
 div.portfoliocard div.event_desc h2.name{
 	font-size:18px;
 	font-weight:300;
-	color: rgba(30,30,30,1);
 	padding:0;
 	margin:20px 10px 0px 30px;
 }
 div.portfoliocard div.event_desc h3.description{
 	font-size:14px;
 	font-weight:300;
-	color:rgba(170,170,170,1);
 	padding:0;
 	margin:-5px 10px 10px 30px;
 }
